# right_atlas

./: .gitignore  CMakeLists.txt  Leevi notes.txt  Readme.md
source/: Atlas.cpp  Atlas.h  CMakeLists.txt  Main.cpp  PngImage.cpp  PngImage.h
source/lib/: libpng.lib  libpngd.lib  zlibstat.lib  zlibstatd.lib
